chore: resolve modal backdrop not showing [sc-5850]

--- a/src/scss/_pricing-v2.scss
+++ b/src/scss/_pricing-v2.scss
@@ -588,7 +588,13 @@
     }
 
     &__calculation {
-      margin-top: 0px;
+      margin-top: 2.5rem;
+      h2 {
+        margin-bottom: 1rem !important;
+      }
+      h4 {
+        margin-bottom: 1.8rem !important;
+      }
     }
     .pricing__enterprise {
       text-align: center;
